k8s/base/service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-gallery
  namespace: imagegallery-dev
spec:
  type: ClusterIP
  selector:
    app: image-gallery
  ports:
    - name: http
      port: 80
      targetPort: http
